--- a/betaFour/style.css
+++ b/betaFour/style.css
@@ -16,4 +16,7 @@ body {
 #home .imgbox {
   width: 500px;
   height: 500px;
+}
+#home .textbox h1 {
+  font-size: 50px;
 }/*# sourceMappingURL=style.css.map */
